k8s/talos/apps/gastam/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gastam-service
  namespace: gastam
spec:
  selector:
    app: gastam
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
