k8s/talos/apps/gastam/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gastam
  namespace: gastam
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-public
      namespace: traefik
  hostnames:
    - gastam.bigd.no
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
