k8s/talos/apps/gastam/ciliumnetworkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: gastam-policy
  namespace: gastam
spec:
  endpointSelector:
    matchLabels:
      app: gastam
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
            "k8s:app.kubernetes.io/instance": traefik-traefik
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": keda
            "k8s:app.kubernetes.io/component": interceptor
            "k8s:app.kubernetes.io/part-of": keda-add-ons-http
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - fromEntities:
        - host
        - health
